--- a/src/Components/Transcation/Trascation.css
+++ b/src/Components/Transcation/Trascation.css
@@ -1,5 +1,4 @@
 .Trans_main{
-    background-color:rgba(0, 0, 0, 0.87);
     padding: 100px 0px;
     color: white;
     height: auto;
@@ -13,70 +12,27 @@
 }
 .gre{
     color: #08d765;
-    background-color:rgba(0, 0, 0, 0.87) !important;
-    /* color: rgba(0, 0, 0, 0.87); */
+    background-color:rgba(0, 0, 0, 0.10) !important;
     border: none;
     width: 100%;
     text-align: left;
     color:#08d765 ;
     margin-top: 20px;
-    /* padding-right: 100px;
-     */
+
 
      border-bottom: 1px solid white;
 }
 .gre:hover{
 border-bottom: 1px solid black;
-background-color:rgba(0, 0, 0, 0.87) ;
+background-color:rgba(0, 0, 0, 0.7) ;
 }
-/* .table{
-    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
-    padding: 25px;
-    border-radius: 20px;
-    background-size: cover;
-    background-color: #222a31;
-}
-.Inner_tb{
-    width: 100%;
-    display: table;
-    border-spacing: 0;
-    border-collapse: collapse;
-    min-width: 500px;
-}
-.T_row{
-    color: inherit;
-    display: table-row;
-    outline: 0;
-    vertical-align: middle;
-}
-.T_he{
-    font-weight: 500;
-    line-height: 1.5rem;
-    color: white;
-}
-.T_body{
-    display: table-row-group;
-}
-.T_foot{
-    display: table-footer-group;
-}
-.Footer{
-    color: inherit;
-    display: table-row;
-    outline: 0;
-    vertical-align: middle;
-}
-.T_head{
-    display: table-header-group;
-    background-color: #222a31;
-} */
+
 
 
 .table_div{
     padding: 25px;
     border-radius: 20px;
     background-size: cover;
-    /* background-color:rgba(0, 0, 0, 0.87)  !important; */
     box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%),0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
 }
 .align{
@@ -100,8 +56,6 @@ background-color:rgba(0, 0, 0, 0.87) ;
     background-color: white;
     width: 100%;
     height: 1px;
-    /* margin-bottom: 10px !important;
-    margin-left: 30px!important; */
 }
 .trans_foot{
     display: flex;
@@ -119,13 +73,13 @@ background-color:rgba(0, 0, 0, 0.87) ;
 .Trans_icon{
     margin-left: 10px;
     margin-bottom: 10px;
-    color: black;
+    color: white !important;
 }
+
 .Inner_g{
     color: white;
     display: flex;
     align-items: center;  
-    /* flex-direction: column; */
     justify-content: center;
     background-color: #08d765 !important;
     height: 70px;
@@ -145,4 +99,19 @@ background-color:rgba(0, 0, 0, 0.87) ;
     svg {
       overflow: hidden;
       vertical-align: middle;
+  }
+
+
+
+
+  /* Media quries ............................. */
+
+
+  @media only screen and (max-width: 600px){
+    .font_sm{
+        font-size: 13px !important;
+    }
+    .Trans_sm{
+        font-size: 11px!important;
+    }
   }
