made some minor changes

--- a/src/Components/Stakes/Stakes.css
+++ b/src/Components/Stakes/Stakes.css
@@ -130,6 +130,11 @@ p{
     color: white !important;
   }
 
+  .Table_para1{
+margin-bottom: 10px!important;
+
+  }
+
 
 
   /* media quiry............... */
