--- a/src/Components/Transcation/Trascation.css
+++ b/src/Components/Transcation/Trascation.css
@@ -100,6 +100,9 @@ background-color:rgba(0, 0, 0, 0.7) ;
       overflow: hidden;
       vertical-align: middle;
   }
+  .Trans_sm{
+    margin-bottom: 10px !important;
+  }
 
 
 
