--- a/src/Components/Stakes/Stakes.css
+++ b/src/Components/Stakes/Stakes.css
@@ -157,6 +157,10 @@ margin-bottom: 10px!important;
       margin-top: 6px !important;
     }
     .Stake_h{
-      font-size: 2rem;
+      font-size: 1.8rem;
+    }
+    .idk{
+      padding-top: 10px !important;
+      margin-top: 10px !important;
     }
   }
